Fixed the first image's size problem and also learn how to display a welcome popup.

--- a/Clucking-Bell-Website/index.html
+++ b/Clucking-Bell-Website/index.html
@@ -10,14 +10,14 @@
     <h1 class="page-name">CLUCKING BELL</h1>
 
     <div class="p1">
-      <p>How would you like to order today?</p>
+      <p>How would you like to order?</p>
     </div>
 
     <div class="p2">
       <p>Delivery and pickup now available.</p>
     </div>
 
-    <div class="image1">
+    <div class="image">
       <img src="Fried Chicken.jpg" alt=""/>
     </div>
 
@@ -25,7 +25,11 @@
       <img src="Fried-Chicken-image.jpg" alt=""/>
     </div>
 
-    <p class="slogan">Clucking Bell, if you enjoy it the chicken didn't die in vain.</p>
+    <p class="slogan">Clucking Bell, if you enjoyed it the chicken didn't die in vain.</p>
+
+    <script type="text/Javascript">
+      alert("Welcome to Clucking Bell.");
+    </script>
 
   </body>
 </html>
